@@ -360,7 +360,7 @@ t_hour.Position:=strtoint(h);
 t_min.Position:=strtoint(n);
 t_sec.Position:=strtoint(s);
 tzlabel.caption:=csc.tz.ZoneName;
-Tdt_Ut.caption:=inttostr(round(csc.DT_UT*3600));
+Tdt_Ut.caption:=formatfloat(f1,(csc.DT_UT*3600));
 checkbox4.checked:=csc.Force_DT_UT;
 if not csc.Force_DT_UT then csc.DT_UT_val:=csc.DT_UT;
 dt_ut.value:=round(csc.DT_UT_val*3600);
@@ -421,7 +421,7 @@ procedure Tf_config_time.CheckBox1Click(Sender: TObject);
 begin
 csc.UseSystemTime:=checkbox1.checked;
 SetCurrentTime(csc);
-csc.DT_UT:=DTminusUT(csc.curyear,csc);
+csc.DT_UT:=DTminusUT(csc.CurYear,csc.CurMonth,csc);
 d_year.enabled:=not csc.UseSystemTime;
 d_yearEdit.enabled:=d_year.enabled;
 d_month.enabled:=d_year.enabled;
@@ -580,8 +580,8 @@ csc.curday:=d_day.Position;
 csc.tz.JD:=Jd(csc.curyear,csc.curmonth,csc.curday,csc.curtime-csc.timezone);
 csc.TimeZone:=csc.tz.SecondsOffset/3600;
 tzlabel.caption:=csc.tz.ZoneName;
-csc.DT_UT:=DTminusUT(csc.curyear,csc);
-Tdt_Ut.caption:=inttostr(round(csc.DT_UT*3600));
+csc.DT_UT:=DTminusUT(csc.CurYear,csc.CurMonth,csc);
+Tdt_Ut.caption:=formatfloat(f1,(csc.DT_UT*3600));
 dt_ut.text:=Tdt_Ut.caption;
 LockChange:=true;
 JDEdit.Value:=Jd(csc.curyear,csc.curmonth,csc.curday,csc.curtime-csc.timezone);
@@ -770,8 +770,8 @@ procedure Tf_config_time.CheckBox4Click(Sender: TObject);
 begin
 csc.Force_DT_UT:=checkbox4.checked;
 dt_ut.enabled:=csc.Force_DT_UT;
-csc.DT_UT:=DTminusUT(csc.curyear,csc);
-Tdt_Ut.caption:=inttostr(round(csc.DT_UT*3600));
+csc.DT_UT:=DTminusUT(csc.CurYear,csc.CurMonth,csc);
+Tdt_Ut.caption:=formatfloat(f1,(csc.DT_UT*3600));
 dt_ut.text:=Tdt_Ut.caption;
 end;
 
